fixed spacing of dm cards on splash page

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -35,7 +35,6 @@
 }
 
 .dm-highlight {
-  margin-left:5em;
   border-radius: 10px;
   background-color: #1c2324;
   color: whitesmoke;
